Added support for default credentials.
- Tested with new tool (print_default_creds_token) on:
  - workstation for env var and well known place.
  - GCE for compute engine default creds.
- I'd prefer the grpc_default_credentials_create() API to remain
  synchronous even though there may be an async call for gce detection
  on which we block.

--- a/vsprojects/vs2013/grpc.vcxproj
+++ b/vsprojects/vs2013/grpc.vcxproj
@@ -201,6 +201,12 @@
     </ClCompile>
     <ClCompile Include="..\..\src\core\security\credentials.c">
     </ClCompile>
+    <ClCompile Include="..\..\src\core\security\credentials_posix.c">
+    </ClCompile>
+    <ClCompile Include="..\..\src\core\security\credentials_win32.c">
+    </ClCompile>
+    <ClCompile Include="..\..\src\core\security\default_credentials.c">
+    </ClCompile>
     <ClCompile Include="..\..\src\core\security\factories.c">
     </ClCompile>
     <ClCompile Include="..\..\src\core\security\json_token.c">
