--- a/vsprojects/vs2013/grpc_shared.vcxproj
+++ b/vsprojects/vs2013/grpc_shared.vcxproj
@@ -205,6 +205,12 @@
     </ClCompile>
     <ClCompile Include="..\..\src\core\security\credentials.c">
     </ClCompile>
+    <ClCompile Include="..\..\src\core\security\credentials_posix.c">
+    </ClCompile>
+    <ClCompile Include="..\..\src\core\security\credentials_win32.c">
+    </ClCompile>
+    <ClCompile Include="..\..\src\core\security\default_credentials.c">
+    </ClCompile>
     <ClCompile Include="..\..\src\core\security\factories.c">
     </ClCompile>
     <ClCompile Include="..\..\src\core\security\json_token.c">
