Include grpc_csharp_ext.dll only under Windows

--- a/src/csharp/Grpc.Core/Grpc.Core.csproj
+++ b/src/csharp/Grpc.Core/Grpc.Core.csproj
@@ -66,10 +66,17 @@
     <Compile Include="Utils\BenchmarkUtil.cs" />
     <Compile Include="Utils\ExceptionHelper.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Content Include="..\..\..\vsprojects\vs2013\Debug\grpc_csharp_ext.dll">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-  </ItemGroup>
+  <Choose>
+    <!-- Under Windows, automatically copy the C core library to output dir.
+         Under Monodevelop it's not supported so it has no effect. -->
+    <When Condition=" '$(Platform)' == 'x86' ">
+      <ItemGroup>
+        <Content Include="..\..\..\vsprojects\vs2013\Debug\grpc_csharp_ext.dll">
+          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </Content>
+      </ItemGroup>
+    </When>
+    <Otherwise/>
+  </Choose>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
