Updated dockerfile with correct node executable

--- a/tools/dockerfile/grpc_node_base/Dockerfile
+++ b/tools/dockerfile/grpc_node_base/Dockerfile
@@ -34,7 +34,7 @@ FROM grpc/base
 
 RUN curl -sL https://deb.nodesource.com/setup | bash -
 
-RUN apt-get update && apt-get install -y nodejs
+RUN apt-get update && apt-get install -y nodejs nodejs-legacy
 
 RUN npm install -g node-gyp
 
