--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,8 @@
 language: cpp
+before_install:
+  - sudo add-apt-repository ppa:yjwong/gflags -y
+  - sudo apt-get update -qq
+  - sudo apt-get install -qq libgtest-dev libgflags-dev
 script: ./tools/run_tests/run_tests.py -l c c++ -t -j2
 notifications:
   email: false
