Further modified test running syntax

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,6 @@
 language: cpp
-script: ./tools/run_tests/run_tests.py -l c node -t -j2
+script:
+ - ./tools/run_tests/run_tests.py -l c -t -j2
+ - ./tools/run_tests/run_tests.py -l node -t -j2
 notifications:
   email: false
