Better parallelize test running on Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
 language: cpp
-script: ./tools/run_tests/run_tests.py -lc -t -j2
+script: ./tools/run_tests/run_tests.py -l c -t -j 8 -c dbg
 notifications:
   email: false
