Add opt build again

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,6 @@
 language: cpp
-script: ./tools/run_tests/run_tests.py -l c -t -j 8 -c dbg
+script:
+  - ./tools/run_tests/run_tests.py -l c -t -j 8 -c dbg
+  - ./tools/run_tests/run_tests.py -l c -t -j 8 -c opt
 notifications:
   email: false
