Fixes the sample app to point to the new podspecs

--- a/src/objective-c/examples/Sample/Podfile
+++ b/src/objective-c/examples/Sample/Podfile
@@ -1,13 +1,11 @@
 source 'https://github.com/CocoaPods/Specs.git'
 platform :ios, '8.0'
 
-pod 'RxLibrary', :path => "../../RxLibrary"
-pod 'GRPCClient', :path => "../../GRPCClient"
+pod 'gRPC', :path => "../../../.."
+pod 'RxLibrary', :path => "../../../.."
 
 target 'Sample' do
-
 end
 
 target 'SampleTests' do
-
 end
