--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,11 @@ before_install:
   - sudo apt-get update -qq
   - sudo apt-get install -qq libgtest-dev libgflags-dev python-virtualenv
 script:
-  - ./tools/run_tests/run_tests.py -l c -t -j 16 -c dbg
-  - ./tools/run_tests/run_tests.py -l c++ -t -j 16 -c dbg
+  - ./tools/run_tests/run_tests.py -l c -t -j 16 -c dbg -s 2.0
+  - ./tools/run_tests/run_tests.py -l c++ -t -j 16 -c dbg -s 2.0
   - make clean
-  - ./tools/run_tests/run_tests.py -l c -t -j 16 -c opt
-  - ./tools/run_tests/run_tests.py -l c++ -t -j 16 -c opt
+  - ./tools/run_tests/run_tests.py -l c -t -j 16 -c opt -s 2.0
+  - ./tools/run_tests/run_tests.py -l c++ -t -j 16 -c opt -s 2.0
   - ./tools/run_tests/run_tests.py -l node -t -j 16 -c opt
 notifications:
   email: false
