--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,8 @@ before_install:
   - sudo apt-get update -qq
   - sudo apt-get install -qq libgtest-dev libgflags-dev python-virtualenv
 script:
+  - rvm install 2.1.2
+  - rvm use 2.1.2
   - ./tools/run_tests/run_tests.py -l c -t -j 16 -c dbg -s 2.0
   - ./tools/run_tests/run_tests.py -l c++ -t -j 16 -c dbg -s 2.0
   - make clean
