--- a/.travis.yml
+++ b/.travis.yml
@@ -7,13 +7,9 @@ env:
   global:
     - RUBY_VERSION=2.1
   matrix:
-    - CONFIG=dbg TEST=c
-    - CONFIG=dbg TEST=c++
-    - CONFIG=opt TEST=c
-    - CONFIG=opt TEST=c++
-    - CONFIG=opt TEST=node
-    - CONFIG=opt TEST=ruby
+    - CONFIG=opt TEST=python
 script:
+  - which python
   - rvm use $RUBY_VERSION
   - gem install bundler
   - ./tools/run_tests/run_tests.py -l $TEST -t -j 16 -c $CONFIG -s 2.0
