Enable asan for C core
Also speed up a test, and disable some rarely touched but long running tests

--- a/templates/Makefile.template
+++ b/templates/Makefile.template
@@ -196,7 +196,7 @@ DEFINES += $(DEFINES_$(CONFIG)) INSTALL_PREFIX=\"$(prefix)\"
 LDFLAGS += $(LDFLAGS_$(CONFIG))
 
 ifdef EXTRA_DEFINES
-DEFINES += EXTRA_DEFINES
+DEFINES += $(EXTRA_DEFINES)
 endif
 
 CFLAGS += -std=c89 -pedantic
