Adds two tests that pass with the RouteGuide Java server

--- a/src/objective-c/examples/Sample/Podfile
+++ b/src/objective-c/examples/Sample/Podfile
@@ -4,6 +4,8 @@ platform :ios, '8.0'
 pod 'gRPC', :path => "../../../.."
 pod 'RxLibrary', :path => "../../../.."
 
+link_with 'Sample', 'SampleTests'
+
 target 'Sample' do
 end
 
