--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,10 @@ language: cpp
 before_install:
   - sudo add-apt-repository ppa:yjwong/gflags -y
   - sudo add-apt-repository ppa:h-rayflood/llvm -y
+  - sudo add-apt-repository ppa:ondrej/php5-5.6
+  - sudo apt-get dist-upgrade
   - sudo apt-get update -qq
-  - sudo apt-get install -qq libgtest-dev libgflags-dev python-virtualenv clang-3.5 php5-dev php5
+  - sudo apt-get install -qq libgtest-dev libgflags-dev python-virtualenv clang-3.5 php5-dev
   - sudo pip install cpp-coveralls
 env:
   global:
