--- a/src/node/package.json
+++ b/src/node/package.json
@@ -26,7 +26,7 @@
   "dependencies": {
     "bindings": "^1.2.0",
     "nan": "^1.5.0",
-    "protobufjs": "murgatroid99/ProtoBuf.js",
+    "protobufjs": "^4.0.0-b2",
     "underscore": "^1.6.0",
     "underscore.string": "^3.0.0"
   },
