Updated php_base Dockerfile to install PHP instead of compiling it

--- a/tools/dockerfile/grpc_php/Dockerfile
+++ b/tools/dockerfile/grpc_php/Dockerfile
@@ -45,3 +45,5 @@ RUN cd /var/local/git/grpc/src/php/ext/grpc && git pull && phpize
 RUN cd /var/local/git/grpc/src/php/ext/grpc \
   && ./configure \
   && make
+
+RUN cd /var/local/git/grpc/src/php && ./bin/run_tests.sh
