--- a/tools/dockerfile/grpc_php_base/Dockerfile
+++ b/tools/dockerfile/grpc_php_base/Dockerfile
@@ -50,45 +50,33 @@ RUN apt-get update && apt-get install -y \
     libsqlite3-dev \
     libssl-dev \
     libtool \
+    libxml2 \
     libyaml-dev \
     make \
     patch \
     procps \
-# TODO(mlumish): Uncomment these lines when building against them works
-#    php5-common \
-#    php5-cli \
-#    php5-dev \
-#    php-pear \
+    php5-common \
+    php5-cli \
+    php5-dev \
+    php-pear \
     pkg-config \
     procps \
+    ruby-full \
     sqlite3 \
     zlib1g-dev
 
 # Install the version of PHP gRPC is tested against
 ENV DEBIAN_FRONTEND noniteractive
-RUN apt-get update && apt-get install -y libxml2 libxml2-dev  # used by PHP
-RUN cd /var/local \
-  && curl -o php-5.5.17.tar.gz http://php.net/distributions/php-5.5.17.tar.gz \
-  && tar -xf php-5.5.17.tar.gz \
-  && cd php-5.5.17 \
-  && ./configure --with-zlib=/usr --with-libxml-dir=ext/libxml \
-  && make -j12 && make install
 
 # Download the patched PHP protobuf so that PHP gRPC clients can be generated
 # from proto3 schemas.
 RUN git clone https://github.com/murgatroid99/Protobuf-PHP.git /var/local/git/protobuf-php
 
-# Install ruby (via RVM) as ruby tools are dependencies for building Protobuf
-# PHP extensions.
-RUN gpg --keyserver hkp://keys.gnupg.net --recv-keys D39DC0E3  # Needed for RVM
-RUN \curl -sSL https://get.rvm.io | bash -s stable --ruby
-ENV PATH /usr/local/rvm/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
-
 # ronn: a ruby tool used to convert markdown to man pages, used during the
 # install of Protobuf extensions
 #
 # rake: a ruby version of make used to build the PHP Protobuf extension
-RUN rvm all do gem install ronn rake
+RUN gem install ronn rake
 
 # Get the source from GitHub, this gets the protobuf library as well
 RUN git clone https://github.com/grpc/grpc.git /var/local/git/grpc
